FB-4035: fix Pre Order and closed tag will be cut off

--- a/src/ordering/containers/Menu/components/MenuStoreInfo/MenuStoreInfo.module.scss
+++ b/src/ordering/containers/Menu/components/MenuStoreInfo/MenuStoreInfo.module.scss
@@ -29,6 +29,8 @@
 
   transform: translate3d(0, 50%, 0);
   -webkit-transform: translate3d(0, 50%, 0);
+
+  z-index: 11;
 }
 
 .menuStoreInfoFreeDeliveryTagContainer {
